--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,9 @@ main {
 }
 img {
    width: 60%;
+   display: block;
+   margin: 0 auto;
+   border-radius: 35px;
 }
 a {
    color: black;
@@ -39,12 +42,20 @@ nav a:hover {
    text-align: center;
    font-family: Sixtyfour;
 }
-img {
-   display: block;
-   margin: 0 auto;
-}
-p, h3{
+footer p, h3{
    text-align: center;
+}
+main p {
+   width: 60%;
+   margin: 0 auto;
+   font-size: 1.2em;
+   line-height: 1.5em;
+   padding: 25px;
+   background-color: rgb(130, 155, 191);
+   border: 5px solid black;
+   color: white;
+   border-radius: 20px 0;
+   box-sizing: border-box;
 }
 #sub_title {
    color: rgb(197, 125, 18);
