--- a/laundry/styles/styles.css
+++ b/laundry/styles/styles.css
@@ -1,6 +1,5 @@
 body {
     background-image: linear-gradient(45deg, gray, lightgray, white, lightgray, gray);
-    background-attachment: fixed;
     font-size: 16px;
     margin: 0;
 }
@@ -25,7 +24,6 @@ header h1 {
     line-height: 3.5rem;
 }
 .logo {
-    padding-top: 25px;
     width: 100px;
 }
 section h2 {
@@ -37,12 +35,10 @@ section h2 {
     grid-column: 2;
     justify-items: center;
     align-items: center;
-    padding: 10px 0 40px;
     max-width: 950px;
     margin: 0 auto;
     grid-gap: 30px;
     width: 90%;
-    
 }
 section {
     padding-top: 30px;
@@ -54,7 +50,7 @@ section {
     display: grid;
 }
 footer {
-    background-color: #F0F0F0;
+    background-color: lightgray;
     color: black;
     padding: 25px 50px;
     margin-top: 200px;
@@ -72,20 +68,16 @@ footer {
 }
 #begin img {
     height: 350px;
-    
     justify-self: right;
 }
 #begin p {
     padding: 0 10px;
     height: 100%;
     width: 300px;
+    text-align: center;
 }
 #begin {
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-}
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
 }
