--- a/laundry/styles/styles.css
+++ b/laundry/styles/styles.css
@@ -90,3 +90,58 @@ footer a {
     color: green;
     text-decoration-line: none;
 }
+.logo1 {
+    height: 350px;
+    justify-self: center;
+}
+#Washer-steps p {
+    text-align: center;
+    justify-self: center;
+    grid-column: 1/3;
+    width: 70%;
+    font-size: 30px
+}
+#Washer-steps {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+#Washer-steps h2 {
+    font-size: 80px;
+    text-align: center;
+}
+.washers {
+    grid-column: 1/3;
+    justify-self: center;
+    width: 30%;
+    height: 90%;
+}
+.need-help p {
+    font-size: 15px;
+    text-align: center;
+}
+.need-help h2 {
+    text-align: center;
+    color: var(--accent2-color);
+}
+.need-help {
+    width: 30%;
+    border-radius: 10px;
+    margin: 50px auto 0;
+    padding: 0.7rem 1rem 1.3rem;
+    border: solid 1px var(--accent2-color);
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 2px 2px 10px var(--primary-color);
+    font-size: 15px;
+}
+.need-help a {
+    color: green;
+}
+ol.list {
+    list-style-type: upper-roman;
+    text-align: center;
+    justify-self: center;
+    grid-column: 1/3;
+    width: 50%;
+    font-size: 20px;
+}
